llvm-toolchain-7 (1:7~+rc3-4) UNRELEASED; urgency=medium

  * libc++-7-dev doesn't provide libstdc++-dev anymore (Closes: #908738)

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 13 Sep 2018 15:26:41 +0200

llvm-toolchain-7 (1:7~+rc3-3) unstable; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Disable OpenMP on unsupported architecture x32

  [ Sylvestre Ledru ]
  * Build llvm using -DLLVM_USE_PERF=yes (Closes: #908707)

  [ Gianfranco Costamagna ]
  * Install polly only on arch:all packages

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 13 Sep 2018 09:31:29 +0200

llvm-toolchain-7 (1:7~+rc3-2) unstable; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Fix inverted logic in ifeq statement for POLLY_ENABLE
    and OPENMP_ENABLE (Closes: #908646)

  [ Gianfranco Costamagna ]
  * Drop gnustep and gnustep-devel suggestions (Closes: #902847)
  * Enable polly on s390x
  * Disable omp on armel mips and mipsel for now

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 12 Sep 2018 10:58:12 +0200

llvm-toolchain-7 (1:7~+rc3-1) unstable; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Disable OpenMP on unsupported architectures powerpc,
    powerpcspe, riscv64 and sparc64 (Closes: #907912)

  [ Sylvestre Ledru ]
  * New snapshot release

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 10 Sep 2018 17:01:25 +0200

llvm-toolchain-7 (1:7~+rc2-1~exp3) experimental; urgency=medium

  * Remove libtool flex, bison, dejagnu, tcl, expect,
    and perl from the build deps (testing)
  * Disable force-gcc-header-obj.diff as it is introducing
    some regressions in the search headers
    (Closes: #903709)

  [ Gianfranco Costamagna ]
  * Fix build on armhf, by removing some installed package
  * Fix build on s390x, by disabling OpenMP
  * Add liblldb-7-dev to python-lldb runtime dependencies, needed to import it
  * Enable lld on arm64, mips64el
  * Enable lldb on mips64el

  [ Reshabh Sharma ]