@@ -1,1 +1,3 @@
-usr/lib/llvm-@LLVM_VERSION@/lib/libomp.so.5 
+usr/lib/llvm-@LLVM_VERSION@/lib/libomp-@LLVM_VERSION@.so.5 /usr/lib/@DEB_HOST_MULTIARCH@/
+usr/lib/llvm-@LLVM_VERSION@/lib/libomp.so.5
+usr/lib/llvm-@LLVM_VERSION@/lib/libomp-@LLVM_VERSION@.so.5
